--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,11 @@
     float: left;
 }
 
+.highlighted{
+    background: rgba(70, 190, 255, 0.3);
+    width: 50px;
+    height: 50px;
+}
 .not-empty-sell{
     background: url("/img/sprite.png");
 }
