--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,14 @@
 <!doctype html>
 <html>
 <head>
-    <title>chess.io</title>
-    <script type="text/javascript" src="/js/chess.js"></script>
+    <title>chess</title>
+    <script type="" src="/js/chess.js"></script>
+    <script type="" src="/js/game.js"></script>
+    <script type="" src="//localhost:3000/socket.io/socket.io.js"></script>
     <link rel="stylesheet" href="/css/style.css">
+    <script type="text/javascript">
+        var socket = io.connect('//localhost:3000');
+    </script>
 </head>
 <body>
 </body>
