Created connection between players with session and socket.io

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,10 @@
 <html>
 <head>
     <title>chess</title>
+    <script type="" src="/socket.io/socket.io.js"></script>
     <script type="" src="/js/chess.js"></script>
     <script type="" src="/js/game.js"></script>
-    <script type="" src="//localhost:3000/socket.io/socket.io.js"></script>
     <link rel="stylesheet" href="/css/style.css">
-    <script type="text/javascript">
-        var socket = io.connect('//localhost:3000');
-    </script>
 </head>
 <body>
 </body>
